# pcl_pcdtest

./: readme.md
data/pcd/: 1.pcd  2.pcd
data/velo_new_txt/: 000000.txt
read_pc_color/: CMakeLists.txt  read_pcd.cpp
read_pcd/: CMakeLists.txt  pcd_read.cpp  test_pcd.pcd  test_pcd1.pcd  test_pcd2.pcd
trans_bin2pcd/: bin2pcd.cpp  readme.md
trans_bin2pcd _xyzrgbi/: CMakeLists.txt  bin2pcd.cpp  readme.md
trans_binary2ascii/: CMakeLists.txt  readme.md  trans_binary2ascii.cpp
visual_pcd/: CMakeLists.txt  readme.md  visual.cpp
